Cleaned up and redesigned the header section.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@144 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/activities.css
+++ b/public/styles/activities.css
@@ -20,11 +20,10 @@
 
 #activitySection {
   background-color: white;
-  border-left: 1px solid #ddd;
+  border-left: 2px solid #444;
   position: fixed;
   right: 0;
   width: 400px;
-  margin: -40px 0;
 }
 
 #activitySection .activity-list {
