--- a/public/plugins/layers/layers.css
+++ b/public/plugins/layers/layers.css
@@ -14,7 +14,7 @@
   height: 20px;
   position: absolute;
   top: -10px;
-  left: 10px;
+  right: 10px;
   transform: rotate(45deg);
   width: 20px;
 }
@@ -23,6 +23,9 @@
   padding: 20px;
   position: relative;
   border: 1px solid orange;
+  background-position: center;
+  background-size: cover;
+  background-color: orange;
 }
 
 .layer h2 {
