--- a/public/styles/users.css
+++ b/public/styles/users.css
@@ -27,8 +27,32 @@
 
 
 /** Online users list */
+#userBar h2 {
+  display: inline-block;
+}
+
 #onlineUsersList {
   list-style: none;
+  display: inline-block;
+  position: relative;
+  padding-left: 40px;
+  margin-left: 20px;
+  vertical-align: bottom;
+  transition: opacity .33s;
+}
+
+#onlineUsersList.hidden {
+  opacity: 0;
+}
+
+#onlineUsersList:before {
+  content: "";
+  width: 32px;
+  height: 32px;
+  background: url(../images/online-user.png);
+  position: absolute;
+  top: 6px;
+  left: 0;
 }
 
 #onlineUsersList > li {
@@ -61,9 +85,4 @@
 
 #onlineUsersList > li.offline {
   display: none;
-}
-
-#onlineUsersList .profile-image {
-  width: 50px;
-  height: 50px;
 }
