User can now disable the notification on new comments. Added short explanations to each of the notification settings.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@147 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/settings.css
+++ b/public/styles/settings.css
@@ -1,20 +1,29 @@
 
-.settings-list {
-  overflow: hidden;
+.settings-list > div {
+  position: relative;
 }
 
-.settings-list dt,
-.settings-list dd {
-  float: left;
+.settings-list > div + div {
+  margin-top: 10px;
 }
 
 .settings-list dt {
-  width: 90%;
+  padding-left: 25px;
+}
+
+.settings-list label {
+  font-size: 20px;
+}
+
+.settings-list dt p {
+  font-size: 14px;
+  line-height: 16px;
 }
 
 .settings-list dd {
-  text-align: right;
-  width: 10%;
+  position: absolute;
+  left: 0;
+  top: 4px;
 }
 
 .settings-list + button {
