--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -1,34 +1,54 @@
 
-#landingLayer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: white;
-  background-color: rgba(255, 255, 255, .8);
+#landingModal {
+  font-size: 14px;
+  font-weight: 300;
 }
 
-#landingLayer + #container {
-  filter: blur(1px);
+#landingModal h2 {
+  margin-left: -2px;
 }
 
-#landingContainer {
-  width: 600px;
-  margin: auto;
-}
 
+/** Features list */
 #featuresList {
   list-style: none;
-  display: flex;
-  flex-flow: wrap;
+  margin: 20px 0 40px;
 }
 
 #featuresList > li {
-  float: left;
-  width: 50%;
-  margin-bottom: 20px;
-  padding: 20px;
-  background-color: white;
+  padding-left: 45px;
+  background: no-repeat top left;
+}
+
+#featuresList > li + li {
+  margin-top: 20px;
+}
+
+#featuresList li:first-child {
+  background-image: url(../images/light-bulb.svg);
+}
+
+#featuresList li:first-child + li {
+  background-image: url(../images/rocket.svg);
+}
+
+#featuresList li:first-child + li + li {
+  background-image: url(../images/people.svg);
+}
+
+#featuresList h3 {
+  font-size: 24px;
+  margin-left: -1px;
+}
+
+
+/** Call-to-action */
+#landingModal .button-bar {
+  text-align: center;
+}
+
+#landingModal .button-bar .button {
+  border-radius: 0;
+  padding: 10px 20px;
+  font-size: 20px;
 }
