Small style fixes.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@155 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/activities.css
+++ b/public/styles/activities.css
@@ -8,6 +8,10 @@
   margin-top: 20px;
 }
 
+.activity-list .timestamp {
+  display: inline-block;
+}
+
 .activity-list .entry-content {
   margin-left: 44px;
   margin-top: -10px;
