Fixed activity list height on page load in Chrome.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@159 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/activities.css
+++ b/public/styles/activities.css
@@ -28,11 +28,13 @@
   position: fixed;
   right: 0;
   width: 400px;
+  height: 100%;
 }
 
 #activitySection .activity-list {
   padding: 40px;
   overflow-y: auto;
+  height: 100%;
 }
 
 #activitySection .activity-list > li {
