Limit idea length to 70 characters.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@160 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/idea-form.css
+++ b/public/styles/idea-form.css
@@ -20,6 +20,11 @@ textarea {
   padding: 5px;
 }
 
+#new-idea .cc-counter {
+  color: #666;
+  font-size: 12px;
+}
+
 textarea {
   height: 100px;
 }
