--- a/public/styles/statuses.css
+++ b/public/styles/statuses.css
@@ -4,7 +4,10 @@
   padding: 2px 5px;
   margin-right: 5px;
   border-radius: 3px;
-  vertical-align: top;
+  vertical-align: middle;
+  display: inline-block;
+  line-height: 20px;
+  margin-top: -5px;
 }
 
 .status-in-backlog .entry-content h3:before {
