Fixed incorrect position of settings panel when the page has been scrolled down. Added visual cues that the profile image can be clicked on.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@165 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -38,12 +38,28 @@ header h2 {
 }
 
 #userName {
+  cursor: pointer;
   float: right;
   font-size: 18px;
+  margin-right: 18px;
+}
+
+#userName:hover {
+  text-decoration: underline;
 }
 
 #userName .profile-image {
   margin-left: 10px;
   width: 55px;
   height: 55px;
+  position: relative;
+}
+
+#userName .profile-image:after {
+  content: "￬";
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  right: -19px;
+  top: 4px;
 }
