Avoid showing "0 people like this".
git-svn-id: https://svn.crebit.ee/internal/brainstorm@166 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -88,6 +88,10 @@
   margin-left: -28px;
 }
 
+[data-vote-count="0"] .entry-data li.votes {
+  display: none;
+}
+
 .entry-data li.votes img {
   margin-top: -7px;
 }
