Fixed activity section messing up previous layout breakpoints.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@171 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/activities.css
+++ b/public/styles/activities.css
@@ -44,3 +44,15 @@
 #activitySection .comment a[href^="#ideas"]:before {
   content: "@";
 }
+
+
+/** Responsive */
+@media (max-width: 1000px) {
+  #activitySection {
+    display: none;
+  }
+
+  #container > header {
+    width: 100% !important;
+  }
+}
