Fixed voted ideas not being marked as such, because of the status class overwriting the vote state.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@184 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/statuses.css
+++ b/public/styles/statuses.css
@@ -10,27 +10,27 @@
   margin-top: -5px;
 }
 
-.status-in-backlog .entry-content h3:before {
+#ideas-list > li[data-status="in-backlog"] .entry-content h3:before {
   display: none;
 }
 
-.status-on-hold .entry-content h3:before {
+#ideas-list > li[data-status="on-hold"] .entry-content h3:before {
   background-color: #DDD;
 }
 
-.status-investigating .entry-content h3:before {
+#ideas-list > li[data-status="investigating"] .entry-content h3:before {
   background-color: #BBDBF9;
 }
 
-.status-in-progress .entry-content h3:before {
+#ideas-list > li[data-status="in-progress"] .entry-content h3:before {
   background-color: #df7df7;
 }
 
-.status-finished .entry-content h3:before {
+#ideas-list > li[data-status="finished"] .entry-content h3:before {
   background-color: #D1ED3E;
 }
 
-.status-cancelled .entry-content h3:before {
+#ideas-list > li[data-status="cancelled"] .entry-content h3:before {
   background-color: #c83c3c;
   color: white;
 }
