Added idea sharing.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@192 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -96,6 +96,10 @@
   margin-top: -7px;
 }
 
+.entry-data li.sharing img {
+  height: 17px;
+}
+
 /** Single column layout */
 @media (max-width: 700px) {
   #ideas-list > li {
