--- a/public/styles/comments.css
+++ b/public/styles/comments.css
@@ -2,3 +2,14 @@
 .comment-form textarea {
   font-size: 14px;
 }
+
+.comment-footer {
+  color: #777;
+  font-size: 12px;
+}
+
+.comment-footer > span + span {
+  margin-left: 5px;
+  border-left: 1px solid #CCC;
+  padding-left: 5px;
+}
