Show how many times an idea has been viewed.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@197 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -96,6 +96,15 @@
   margin-top: -7px;
 }
 
+[data-view-count="0"] .entry-data li.views {
+  display: none;
+}
+
+.entry-data li.views img {
+  margin-top: -4px;
+  margin-left: -30px;
+}
+
 .entry-data li.sharing img {
   height: 17px;
 }
