User can subscribe to new comments under a particular idea.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@201 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -109,6 +109,10 @@
   height: 17px;
 }
 
+.entry-data li.subscription img {
+  height: 20px;
+}
+
 /** Single column layout */
 @media (max-width: 700px) {
   #ideas-list > li {
