Youtube links in comments are now automatically embedded.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@203 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/comments.css
+++ b/public/styles/comments.css
@@ -18,3 +18,10 @@
   color: #777;
   font-size: 10px;
 }
+
+.youtube-video {
+  display: block;
+  width: 100%;
+  border: none;
+  margin-top: 10px;
+}
