Users can now attach images to their comments.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@204 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/comments.css
+++ b/public/styles/comments.css
@@ -3,6 +3,12 @@
   font-size: 14px;
 }
 
+.comment-form input[type="file"] {
+  display: block;
+  margin: -10px 0 10px;
+  font-size: 12px;
+}
+
 .comment-footer {
   color: #777;
   font-size: 12px;
@@ -24,4 +30,18 @@
   width: 100%;
   border: none;
   margin-top: 10px;
+}
+
+.comment-attachments-list {
+  list-style: none;
+  margin-top: 10px;
+}
+
+.comment-attachments-list a {
+  display: block;
+}
+
+.comment-attachments-list img {
+  display: block;
+  max-width: 100%;
 }
