--- a/public/styles/comments.css
+++ b/public/styles/comments.css
@@ -34,6 +34,10 @@
   margin-bottom: 10px;
 }
 
+.files-property-unsupported .upload-button-container {
+  display: none;
+}
+
 .upload-button-container label {
   font-size: 14px;
   cursor: pointer;
