Break long words in descriptions.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@217 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -292,6 +292,7 @@ a.vote-action.waiting .text,
 
 .idea-description {
   white-space: pre-line;
+  word-wrap: break-word;
 }
 
 .idea-activity-section form + .activity-list {
