Kicked up contrast a bit for idea links section.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@218 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -56,7 +56,7 @@
 
 #ideas-list footer {
   padding: 15px 15px 10px;
-  background-color: #f0f0f0;
+  background-color: #ececec;
 }
 
 .entry-data {
